0026690: Problem of compilation on imac monoblock